--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,1 +1,6 @@
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
+
+
+<app-alert [color]="successColor" [text]='successText']></app-alert>
+<app-alert [color]="warningCOlor" [text]="warningText"></app-alert>
+<app-alert [color]="dangerColor" [text]="dangerText"></app-alert>
