Implemented Alerts, Admin Registration, Forgot Password and Reset Password

--- a/src/app/core/alert/alert.component.html
+++ b/src/app/core/alert/alert.component.html
@@ -1,11 +1,8 @@
-<div class="alert"
+<div class="alert animated fadeInRight"
      role="alert"
-     *ngIf="show"
      [style.background]="color"
-     [style.color]="font"
-     [style.opacity]="opacity"
 >
-  {{text}}
+  <strong>{{text}}</strong>
   <i (click)="dismiss()"
      class="fa fa-remove fa-fw pull-right"
   ></i>
