--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -13,7 +13,7 @@
   <app-sidebar (mouseover)="toggleLeftSidebar($event)" (mouseout)="toggleLeftSidebar($event)"></app-sidebar>
   <!-- =============================================== -->
 
-  <!--<router-outlet></router-outlet>-->
+  <router-outlet></router-outlet>
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
