Modified Folder Structure, Added Proper Navigations to Sidebar

--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -52,8 +52,8 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> Create</a></li>
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a routerLink="/admin/create"><i class="fa fa-circle-o"></i> Create</a></li>
+          <li><a routerLink="/admin/list"><i class="fa fa-circle-o"></i> List</a></li>
         </ul>
       </li>
 
@@ -70,8 +70,8 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> Create</a></li>
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a routerLink="/agent/create"><i class="fa fa-circle-o"></i> Create</a></li>
+          <li><a routerLink="/agent/list"><i class="fa fa-circle-o"></i> List</a></li>
         </ul>
       </li>
 
@@ -90,8 +90,8 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> Create</a></li>
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a routerLink="/twilio/create"><i class="fa fa-circle-o"></i> Create</a></li>
+          <li><a routerLink="/twilio/list"><i class="fa fa-circle-o"></i> List</a></li>
         </ul>
       </li>
 
@@ -108,8 +108,8 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> Create</a></li>
-          <li><a routerLink="/dashboard"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a routerLink="/widget/create"><i class="fa fa-circle-o"></i> Create</a></li>
+          <li><a routerLink="/widget/list"><i class="fa fa-circle-o"></i> List</a></li>
         </ul>
       </li>
 
@@ -127,7 +127,7 @@
         </a>
         <ul class="treeview-menu">
           <li>
-            <a routerLink="/dashboard">
+            <a routerLink="/chat/pending">
               <i class="fa fa-circle-o"></i> <span>Pending Chats</span>
               <span class="pull-right-container">
                 <small class="label pull-right bg-yellow">2</small>
@@ -135,7 +135,7 @@
             </a>
           </li>
           <li>
-            <a routerLink="/dashboard">
+            <a routerLink="/chat/ongoing">
               <i class="fa fa-circle-o"></i> <span>Ongoing Chats</span>
               <span class="pull-right-container">
                 <small class="label pull-right bg-green">8</small>
@@ -143,7 +143,7 @@
             </a>
           </li>
           <li>
-            <a routerLink="/dashboard">
+            <a routerLink="/chat/rejected">
               <i class="fa fa-circle-o"></i> <span>Rejected Chats</span>
               <span class="pull-right-container">
                 <small class="label pull-right bg-red">5</small>
