--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -139,7 +139,7 @@
                 <a class="btn btn-default btn-flat" routerLink="/profile"> Profile</a>
               </div>
               <div class="pull-right">
-                <a class="btn btn-default btn-flat">Sign out</a>
+                <a class="btn btn-default btn-flat" (click)="onSignOut()">Sign out</a>
               </div>
             </li>
           </ul>
