Agent Section Updated

--- a/src/app/core/layout/inner-pages/profile/profile.component.html
+++ b/src/app/core/layout/inner-pages/profile/profile.component.html
@@ -115,6 +115,7 @@
                                         <input type="text"
                                                class="form-control"
                                                id="email"
+                                               disabled="true"
                                                formControlName="email"
                                                placeholder="Name"
                                         >
