--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <section class="content-header">
-    <h1>Create Agent</h1>
+    <h1>Agent Section</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
       <li><a href="#">Tables</a></li>
@@ -16,7 +16,7 @@
             <form #form="ngForm" (submit)="onSubmit(form)">
               <!-- text input -->
               <div class="box-header with-border">
-                <h3 class="box-title">Create Agent</h3>
+                <h3 class="box-title">{{ editMode ? 'Edit': 'Create' }} Agent</h3>
               </div>
               <div class="row">
                 <div class="col-md-6">
@@ -27,7 +27,7 @@
                       <select class="form-control"
                               id="admin"
                               name="parentId"
-                              [disabled]="editMode"
+                              [disabled]="editMode || (authState | async).isAdmin"
                               #selectedAdmin
                               [ngModel]="agent.parentId"
                               (change)="adminChanged(selectedAdmin.value)"
@@ -41,8 +41,9 @@
                         </option>
                       </select>
                     </div>
-                  </div>
-                  <div class="col-md-6" *ngIf="selectAdmin">
+                </div>
+
+                <div class="col-md-6" *ngIf="selectedAdmin.value > 0">
                     <div class="form-group">
                     <label class="control-label" for="department">
                       Department for Agent
@@ -58,14 +59,18 @@
                     >
                       <option selected value="0">Choose...</option>
                       <option [value]="item.id"
-                              *ngFor="let item of DepartmentAfterChangeEvent"
+                              *ngFor="let item of (afterLoginState | async).department.list; let i = index"
                       >
                         {{item.department_name}}
                       </option>
                     </select>
                   </div>
                 </div>
-                <div class="col-md-6" *ngIf="selectDept">
+
+              </div>
+
+              <div class="row" *ngIf="selectDept">
+                <div class="col-md-6">
                   <div class="form-group" [ngClass]="(firstName.invalid && firstName.touched) ? 'has-error': ''">
                     <label class="control-label" for="firstName">First Name
                       <i *ngIf="firstName.invalid && firstName.touched" class="fa fa-times-circle-o"></i>
@@ -82,7 +87,7 @@
                     <span *ngIf="firstName.invalid && firstName.touched" class="help-block">Your First Name is Required !</span>
                   </div>
                 </div>
-                <div class="col-md-6" *ngIf="selectDept">
+                <div class="col-md-6">
                   <div class="form-group" [ngClass]="(lastName.invalid && lastName.touched) ? 'has-error': ''">
                     <label class="control-label" for="lastName">Last Name
                       <i *ngIf="lastName.invalid && lastName.touched" class="fa fa-times-circle-o"></i>
@@ -100,6 +105,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="row" *ngIf="selectDept">
                 <div class="col-md-6">
                   <div class="form-group" [ngClass]="(email.invalid && email.touched) ? 'has-error': ''">
@@ -140,6 +146,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="row" *ngIf="selectDept">
                 <div class="col-md-6">
                   <div class="form-group" [ngClass]="(phone.invalid && phone.touched) ? 'has-error': ''">
@@ -164,9 +171,10 @@
 
                 </div>
               </div>
+
               <div class="col-md-12">
                 <div class="box-footer">
-                  <button type="submit" [disabled]="form.invalid || !selectAdmin || !selectDept" class="btn btn-primary pull-right" >Submit</button>
+                  <button type="submit" [disabled]="form.invalid" class="btn btn-primary pull-right" >Submit</button>
                 </div>
               </div>
             </form>
