--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -16,7 +16,7 @@
                         <form #form="ngForm" (submit)="onCreateDep(form)">
                             <!-- text input -->
                             <div class="box-header with-border">
-                                <h3 class="box-title">Create Department Credentials</h3>
+                                <h3 class="box-title">{{ editMode ? 'Edit' : 'Create' }} Department</h3>
                             </div>
                             <div class="col-md-12">
                                 <div class="row">
@@ -30,8 +30,7 @@
                                                     name="userId"
                                                     [disabled]="editMode || (authState | async).isAdmin"
                                                     #selected
-                                                    [(ngModel)]="dep.userId"
-                                            >
+                                                    [(ngModel)]="dep.userId">
                                                 <option selected value="0">Choose...</option>
                                                 <option [value]="item.id"
                                                         *ngFor="let item of (afterLoginState | async).admin.list; let i = index"
