--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
@@ -42,7 +42,7 @@
                 <td>{{item.created_at}}</td>
                 <td>
                   <!-- Single button -->
-                  <div class="btn-group" [appDropdown]="'open'">
+                  <div class="btn-group" [appDropdown]="'open'" disable-hover="true">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Action <span class="caret"></span>
                     </button>
