--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -34,7 +34,7 @@
                                         <select class="form-control"
                                                 id="admin"
                                                 name="userId"
-                                                [disabled]="editMode"
+                                                [disabled]="editMode || (authState | async).isAdmin"
                                                 #selectedAdmin
                                                 [ngModel]="widget.userId"
                                                 (change)="adminChanged(selectedAdmin.value)">
@@ -56,9 +56,8 @@
                                         <select class="form-control"
                                                 id="department"
                                                 name="departmentIdArray"
-                                                [disabled]="editMode"
                                                 #selectedDepartment="ngModel"
-                                                [ngModel]="widget.departmentId" multiple
+                                                [ngModel]="widget.departmentIdArray" multiple
                                         >
                                             <option [value]="item.id"
                                                     *ngFor="let item of (afterLoginState | async).department.list"
@@ -89,8 +88,8 @@
                                                name="website"
                                                [ngModel]="widget.website"
                                                #website="ngModel"
-                                               required
                                                placeholder="Website URL"
+                                               required
                                         >
                                         <span *ngIf="website.invalid && website.touched" class="help-block">Website URL is Required !</span>
                                     </div>
@@ -112,8 +111,8 @@
                                                name="details"
                                                [ngModel]="widget.details"
                                                #details="ngModel"
-                                               required
                                                placeholder="Details about the widget ...."
+                                               required
                                         >
                                         <span *ngIf="details.invalid && details.touched" class="help-block">Widget details is Required !</span>
                                     </div>
@@ -132,7 +131,6 @@
                                         <select class="form-control"
                                                 id="timezone"
                                                 name="scheduleTimezone"
-                                                [disabled]="editMode"
                                                 #selectedTimezone
                                                 required
                                                 [ngModel]="widget.scheduleTimezone"
@@ -181,16 +179,16 @@
                                         >
                                     </div>
                                     <span *ngIf="fileUpload.invalid && fileUpload.touched && postedImage===undefined" class="help-block">Website URL is Required!</span>
-                                    <div class="col-md-6" [hidden]="hideUploadedImage">
+                                    <div class="col-md-6" *ngIf="!hideUploadedImage">
                                             <div class="image">
                                                 <i class="fa fa-times-circle fa-pull-right"
                                                    aria-hidden="true"
                                                    (click)="removeUploadedImage()"
                                                 ></i>
-                                                <img
-                                                        class="img-responsive uploaded-image"
-                                                        width="100%"
-                                                        height="auto"
+                                                <img class="img-responsive uploaded-image"
+                                                     width="100%"
+                                                     height="auto"
+                                                     [src]="imgSrc"
                                                 />
                                             </div>
                                         </div>
