--- a/src/app/core/auth/sign-in/sign-in.component.html
+++ b/src/app/core/auth/sign-in/sign-in.component.html
@@ -11,7 +11,7 @@
         <div class="form-group has-feedback">
           <input type="email"
                  class="form-control"
-                 placeholder="Email or Username"
+                 placeholder="Email"
                  name="email"
                  required
                  ngModel
@@ -47,12 +47,17 @@
         </div>
 
         <div class="row">
-          <div class="col-xs-8">
+          <div class="col-xs-4">
             <!--<div class="checkbox icheck">-->
               <!--<label>-->
                 <!--<input type="checkbox"> Remember Me-->
               <!--</label>-->
             <!--</div>-->
+          </div>
+          <div class="col-xs-4">
+            <a class="btn btn-primary btn-block btn-flat" [routerLink]="['/sign-up']">
+              Sign Up
+            </a>
           </div>
           <!-- /.col -->
           <div class="col-xs-4">
@@ -77,7 +82,7 @@
       <!-- /.social-auth-links -->
 
       <a [routerLink]="['/forgot-password']">I forgot my password</a><br>
-      <a [routerLink]="['/sign-up']" class="text-center">Register a new membership</a>
+      <!--<a [routerLink]="['/sign-up']" class="text-center">Register a new membership</a>-->
 
     </div>
     <!-- /.login-box-body -->
