--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <section class="content-header">
-    <h1>Admin List</h1>
+    <h1>Contact List</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
       <li><a href="#">Tables</a></li>
@@ -12,7 +12,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">Admin List</h3>
+            <h3 class="box-title">Contact List</h3>
           </div>
           <!-- /.box-header -->
           <div class="box-body">
@@ -20,51 +20,26 @@
               <thead>
               <tr role="row">
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">First Name</th>
-                <th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Last Name</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Company</th>
+                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">Client Name</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Twilio SID</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
               </tr>
               </thead>
               <tbody>
-              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).admin.list; let i = index">
+                <tr role="row" class="odd" *ngFor="let item of (chatState | async).contactList; let i = index">
                 <td>{{i}}</td>
-                <td>{{item.first_name}}</td>
-                <td>{{item.last_name}}</td>
-                <td>{{item.company}}</td>
-                <td>{{item.email}}</td>
-                <td>{{item.phone}}</td>
-                <td>{{item.twilio_info?.twilio_sid}}</td>
+                <td>{{item.client_info.client_name.name}}</td>
+                <td>{{item.client_info.client_name.email}}</td>
+                <td>{{item.client_info.client_name.phone}}</td>
 
-                <td>
-                  <!-- Single button -->
-                    <div class="btn-group" [appDropdown]="'open'">
-                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Action <span class="caret"></span>
-                      </button>
-                      <ul class="dropdown-menu">
-                        <li> <a (click)="onEdit(item.id)"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </li>
-                        <li *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '1'"> <a (click)="blockUser(item.id)"><i class="fa fa-lock" aria-hidden="true"></i>Block</a> </li>
-                        <li *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '2'"> <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock" aria-hidden="true"></i>Unblock</a> </li>
-                        <li *ngIf="!item.twilio_info?.twilio_sid"> <a (click)="createTwilioSid(item.id)"><i class="fa fa-retweet" aria-hidden="true"></i>Create SID</a> </li>
-                      </ul>
-                    </div>
-                </td>
               </tr>
               </tbody>
               <tfoot>
               <tr>
-                <th rowspan="1" colspan="1">#</th>
-                <th rowspan="1" colspan="1">First Name</th>
-                <th rowspan="1" colspan="1">Last Name</th>
-                <th rowspan="1" colspan="1">Company</th>
-                <th rowspan="1" colspan="1">Email</th>
-                <th rowspan="1" colspan="1">Phone</th>
-                <th rowspan="1" colspan="1">Twilio SID</th>
-                <th rowspan="1" colspan="1">Action</th>
+                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
+                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">Client Name</th>
+                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
+                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
               </tr>
               </tfoot>
             </table>
@@ -110,9 +85,9 @@
           <!-- /.box-body -->
         </div>
         <!-- /.box -->
-        <!-- <div class="msg-popup">
+        <div class="msg-popup">
           <p>This is a success msg!</p>
-        </div> -->
+        </div>
       </div>
       <!-- /.col -->
     </div>
